HelloUltraviolet/Fixtures/RejectedSource/Parallelism/ParallelEscapingClosureSpawn/Expected.uv
//! Expected diagnostic metadata for the ParallelEscapingClosureSpawn rejected-source specimen.

expectedDiagnostic("E-CON-0131", "rule.20.Parallel-Escaping-Closure-Spawn-Err")
